src/objects/DRDW_Cycle_Time_Standard__c.object
<CustomObject>
    <fields>
        <fullName>Assessment_Cycle_Time_Standard_for_Bioph__c</fullName>
        <label>EPCTM (DP1 - DTA) for Biopharma</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assessment_Cycle_Time_Standard_for_Small__c</fullName>
        <label>EPCTM (DP1 - DTA) for Small Molecule</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assessment_Cycle_Time_Standard_for_Vacci__c</fullName>
        <label>EPCTM (DP1 - DTA) for Vaccine</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Evaluation_Cycle_Time_Standard_for_Bioph__c</fullName>
        <label>EPCTM (DTG - DTE) for Biopharma</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Evaluation_Cycle_Time_Standard_for_Small__c</fullName>
        <label>EPCTM (DTG - DTE) for Small Molecule</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Evaluation_Cycle_Time_Standard_for_Vacci__c</fullName>
        <label>EPCTM (DTG - DTE) for Vaccine</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Generation_Cycle_Time_Standard_for_Bioph__c</fullName>
        <label>EPCTM (DTA - DTG) for Biopharma</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Generation_Cycle_Time_Standard_for_Small__c</fullName>
        <label>EPCTM (DTA - DTG) for Small Molecule</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Generation_Cycle_Time_Standard_for_Vacci__c</fullName>
        <label>EPCTM (DTA - DTG) for Vaccine</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>DRDW Cycle Time Standard</label>
    <nameField>
        <displayFormat>CTS-{0000}</displayFormat>
        <label>Cycle Time Standard Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DRDW Cycle Time Standards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Check_negative</fullName>
        <active>true</active>
        <errorConditionFormula>OR(Evaluation_Cycle_Time_Standard_for_Small__c &lt;1,Evaluation_Cycle_Time_Standard_for_Bioph__c &lt;1, Evaluation_Cycle_Time_Standard_for_Vacci__c &lt;1,Generation_Cycle_Time_Standard_for_Small__c &lt;1,Generation_Cycle_Time_Standard_for_Vacci__c &lt;1,Generation_Cycle_Time_Standard_for_Bioph__c &lt;1,Assessment_Cycle_Time_Standard_for_Small__c &lt;1,Assessment_Cycle_Time_Standard_for_Bioph__c &lt;1, 
Assessment_Cycle_Time_Standard_for_Vacci__c &lt;1)</errorConditionFormula>
        <errorMessage>Days can&apos;t be in negative or zero</errorMessage>
    </validationRules>
</CustomObject>